made two figures

--- a/Latex/kag.tex
+++ b/Latex/kag.tex
@@ -269,7 +269,23 @@ which gives $\cv=1/3$ for a single triangle $N=3$. Mysterious...
 
 Supposedly for larger $N_s$ the number of spin components, the kagome lattice AF becomes disordered. 
 
- 
+\begin{figure}[]
+\begin{center}
+\includegraphics[width=\columnwidth]{../Figs/latentheat}
+\caption{Upper panel: The latent heat of the phase transition vs. inverse linear system size.
+  Lower panel: $T_c$ vs. inverse linear system size.
+  The quadratic fits extrapolate to a latent heat of $1.0436629268981978 \times 10^{-4} J_1$ and a critical temperature $T_c/J_1=1.59219 \times 10^{-3}$ for infinite system size.}
+\label{fig:latentheat}
+\end{center}
+\end{figure}
+
+\begin{figure}[]
+\begin{center}
+\includegraphics[width=\columnwidth]{../Figs/specificheat}
+\caption{The specific heat vs. temperature for different system sizes.}
+\label{fig:specificheat}
+\end{center}
+\end{figure} 
  
 
 
