--- a/Latex/kag.tex
+++ b/Latex/kag.tex
@@ -167,6 +167,8 @@
 \affiliation{Department of Physics, University of Oslo, P.~O.~Box 1048 Blindern, N-0316 Oslo, Norway}
 % Add more authors and affiliations as needed
 
+\date{\today}
+
 \begin{abstract}
   We consider the classical antiferromagnetic Heisenberg model on the Kagome lattice. Using Nematic Bond Theory, a diagrammatic method, we find evidence that the ordered $\sqrt{3} \times \sqrt{3}$ low-temperature state is separated from the disordered state at higher temperature by a weak first order phase transition. The latent heat of this phase transition is very small which explains why it has not been detected in previous Monte Carlo simulations. We also consider the pyrochlore antiferromagnet.
 \end{abstract}
